--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/bi111awrence/One_1">View on GitHub</a>
 
-          <h1 id="project_title">One 1</h1>
+          <h1 id="project_title">The First One 1</h1>
           <h2 id="project_tagline">A first attempt at new GitHub website</h2>
 
             <section id="downloads">
