--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
 
         <ul>
-         //<li><a href="http://bi111awrence.github.io/One_1/JSON_1.html">VIEW <strong>JSON Script One Link</strong></a></li>
+         <!--<li><a href="http://bi111awrence.github.io/One_1/JSON_1.html">VIEW <strong>JSON Script One Link</strong></a></li>
+          -->
+          
           <li><a href="https://github.com/bi111awrence/One_1/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/bi111awrence/One_1/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/bi111awrence/One_1">View On <strong>GitHub</strong></a></li>
