--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           -->
           
           <li><a href="https://github.com/bi111awrence/One_1/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="http://bi111awrence.github.io/One_1/JSON_1.html">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="http://bi111awrence.github.io/One_1/JSON_1.html">View <strong>JSON One</strong></a></li>
           <li><a href="https://github.com/bi111awrence/One_1">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
