--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     
-    <script type ="text/javascript">
+   <!-- <script type ="text/javascript">
 
 var obj1 = {user: "John", age: 22, country: "USA" };
 var obj2 = {user: "Will", age: 29, country: "UK" };
@@ -25,7 +25,7 @@ obj3.country= "Italy";
 document.write("<hr />");
 document.write(obj3.user+" is "+obj3.age+" years old and lives in "+obj3.country);
 
-</script>
+</script>-->
   </head>
   <body>
     <div class="wrapper">
